--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.10",
     "mobx": "^4.2.1",
     "mobx-react": "^5.1.2",
+    "pubsub-js": "^1.6.0",
     "react": "^16.3.2",
     "react-dnd": "^2.6.0",
     "react-dnd-html5-backend": "^2.6.0",
@@ -22,6 +23,7 @@
     "@types/jest": "^22.2.3",
     "@types/lodash": "^4.14.108",
     "@types/node": "^10.0.6",
+    "@types/pubsub-js": "^1.5.18",
     "@types/react": "^16.3.14",
     "@types/react-dnd": "^2.0.36",
     "@types/react-dnd-html5-backend": "^2.1.9",
